# chain-registry-api

./: .env  .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  pre-commit  render.yaml  sqlx-data.json
migrations/: 20230331181825_create_chain_table.sql  20230331193302_truncate_chain_trigger.sql  20230401140111_chain_indexes.sql  20230401161329_create_peer_table.sql  20230401165841_created_at_indexes.sql  20230403230030_peer_indexes.sql  20230404182201_add_updated_at.sql  20230503124516_create_address.sql  20230521164949_create_endpoint.sql  20230521172433_create_chain_endpoint.sql  20230625154044_create_liveness.sql  20230626011155_create_liveness_hypertable.sql
src/: hydrate.rs  liveness.rs  main.rs  peers.rs  web.rs
src/api/: chain.rs  error.rs  mod.rs  peer.rs  router.rs
src/db/: chain.rs  endpoint.rs  mod.rs  peer.rs
src/db/fixtures/: chains.sql  peers.sql  recent_peers.sql  truncate_chains.sql
src/fixtures/: chains.sql  recent_peers.sql
src/hydrate/: hydrate.rs  mod.rs
static/: index.html
static/assets/css/: nucleo-icons.css
static/assets/scss/: material-kit.scss
static/assets/scss/material-kit/: _cards.scss  _utilities.scss  _variables.scss  theme.scss
static/assets/scss/material-kit/bootstrap/: _helpers.scss  _mixins.scss  bootstrap-grid.scss  bootstrap-utilities.scss  bootstrap.scss
