[package]
name = "chain-registry-api"
version = "1.0.0"
edition = "2021"
authors = ["David Nix"]
description = "An API for the Cosmos Chain Registry (https://github.com/cosmos/chain-registry)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
axum = { version = "0.6.12", features = ["query"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["raw_value"] }
sqlx = { version = "0.6.3", features = ["macros", "migrate", "runtime-tokio-rustls", "postgres", "chrono", "json"] }
tempfile = "3.4.0"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
utoipa = { version = "3.2.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum", "debug-embed"] }

[dev-dependencies]
tokio-test = "0.4.2"
